# UQM03

./: .gitignore  AI_VISUALIZATION_QUICKSTART.md  AI辅助编程完全指南_基于UQM项目的Prompt工程教程.md  AssertStep_底层Bug修复报告.md  Assert_断言语法修复报告.md  Assert_配置修复报告.md  Assertion_Message_Display_Fix_Report.md  Calculated_Fields_Fix_Report.md  Column_Prefix_修复总结报告.md  Column_Prefix_实战应用场景详解.md  Conditional_Filtering_Implementation_Report.md  Custom_Assertion_Expression_Fix_Report.md  Customer_Unpivot_Filter_Fix_Report.md  Filter_SQL_Expression_Fix_Report.md  HR_Salary_Analysis_Correct_Solution.md  Parameter_Fix_Report.md  PivotStep_Fix_Report.md  README.md  Step_Data_Source_Alias_Fix_Report.md  UQM 查询用例.md  UQM 源码.txt  UQM_AI_Assistant_Guide 01.md  UQM_AI_Assistant_Guide.md  UQM_AI_可视化前端_完整技术方案.md  UQM_AI_大模型_UQM_JSON_SCHEMA_手册.md  UQM_ASSERT_查询用例.md  UQM_Assert_用例集.md  UQM_Complete_JSON_Schema_Reference.md  UQM_Developer_Guide.md  UQM_Engine_Date_Function_Bug_Report.md  UQM_Enrich_用例集.md  UQM_JSON_SCHEMA_权威技术参考手册.md  UQM_Multi_Pivot_Analysis_Explanation.md  UQM_PROJECT_COMPLETION_SUMMARY.md  UQM_Pivot_Salary_Analysis.md  UQM_Pivot_用例集.md  UQM_Query_用例集.md  UQM_Technical_Schema_Specification.md  UQM_UNION_查询用例.md  UQM_Union_用例集.md  (+18 more)
uqm-backend/: .env copy.example  AI_API_README.md  Dockerfile  PAGINATION_IMPLEMENTATION_PLAN.md  PAGINATION_IMPLEMENTATION_PLAN_CN.md  QUICK_START_AI.md  README.md  USER_CASE_ANALYSIS_REPORT.md  check_env.py  check_products_inventory.py  check_table_structure.py  debug_assertion_response.py  debug_multi_step.py  debug_parameter_substitution.py  debug_type_handling.py  debug_user_case.py  debug_window_function.py  docker-compose.yml  example_usage.py  pyproject.toml  requirements.txt  setup.py  start_with_ai.py  (+69 more)
(+92 files in other folders)
